--- a/bio.html
+++ b/bio.html
@@ -186,15 +186,15 @@ footer{
                 <span>No Hp:</span>
                 <p>085813799094</p>
               </div>
-              <div class="info" onclick="changeText('No Hp:', 'Laki-Laki')">
+              <div class="info" onclick="changeText('Gender:', 'Laki-Laki')">
                 <span>Gender:</span>
                 <p>Laki-Laki</p>
               </div>
-              <div class="info" onclick="changeText('No Hp:', '085723238223')">
+              <div class="info" onclick="changeText('No Wa:', '085723238223')">
                 <span>No Wa:</span>
                 <p>085723238223</p>
               </div>
-              <div class="info" onclick="changeText('No Hp:', '085723238223')">
+              <div class="info" onclick="changeText('Ign Mc:', 'Larkxz')">
                 <span>Ign Mc:</span>
                 <p>Larkxz</p>
               </div>
