--- a/bio.html
+++ b/bio.html
@@ -174,7 +174,7 @@ footer{
               <span>Umur:</span>
               <p>14 tahun</p>
             </div>
-            <div class="info" onclick="changeText('Alamat:', 'Jl. Raya No. 123')">
+            <div class="info" onclick="changeText('Alamat:', 'Tangsel')">
                 <span>Alamat:</span>
                 <p>Tangsel</p>
               </div>
