--- a/bio.html
+++ b/bio.html
@@ -166,7 +166,7 @@ footer{
         <div class="biodata">
           <h2>Biodata</h2>
           <div class="details">
-            <div class="info" onclick="changeText('Nama:', 'Nadiyab .B')">
+            <div class="info" onclick="changeText('Nama:', 'Nadiyan .B')">
               <span>Nama:</span>
               <p>NB</p>
             </div>
