--- a/bio.html
+++ b/bio.html
@@ -180,7 +180,7 @@ footer{
               </div>
               <div class="info" onclick="changeText('Email:', 'sycledark@gmail.com')">
                 <span>Email:</span>
-                <p>sycledark@.com</p>
+                <p>sycledark@gmail.com</p>
               </div>
               <div class="info" onclick="changeText('No Hp:', '085813799094')">
                 <span>No Hp:</span>
