--- a/bio.html
+++ b/bio.html
@@ -199,7 +199,7 @@ footer{
                 <p>Larkxz</p>
               </div>
               <div class="infokukukuntul">
-                <p >larkxz © 2023</p>
+                <p >Larkxz © 2023</p>
               </div>
           </div>
         </div>
