--- a/bio.html
+++ b/bio.html
@@ -194,9 +194,9 @@ footer{
                 <span>No Wa:</span>
                 <p>085723238223</p>
               </div>
-              <div class="info" onclick="changeText('Ign Mc:', 'Larkxz')">
-                <span>Ign Mc:</span>
-                <p>Larkxz</p>
+              <div class="info" onclick="changeText('Ewallet Utama:', 'Gopay')">
+                <span>Ewallet Utama:</span>
+                <p>Gojek/Gopay</p>
               </div>
               <div class="infokukukuntul">
                 <p >Larkxz © 2023</p>
