--- a/bio.html
+++ b/bio.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link type="image/x-icon" rel="shortcut icon" href="https://i.imgur.com/Dg7AqLL.jpg">
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
